--- a/components/python-kqiuuclf/overlays/development/deployment-patch.yaml
+++ b/components/python-kqiuuclf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-kqiuuclf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/python-kqiuuclf:bef1ba30af2cf991ae28d8a52b37dcbaf1fa9c09@sha256:edbeb327a110e7e7b1e9f4141a9b67098a59ca9a7f116641e385e103c1ccae6b
+          name: container-image
